# GoFigure2

./: .gitattributes  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Copyright.txt  CopyrightCrystal.txt  CopyrightNuvola.txt  Doxyfile  Doxyfile.txt.in  GOFIGURE2CPack.cmake  GOFIGURE2CPackOptions.cmake.in  GOFIGURE2Uninstall.cmake.in  GoFigure Action plan.xlsx  GoFigure2Config.cmake.in  GoFigure2IncludeDirectories.cmake  QGoMainWindow.cxx  QGoMainWindow.h  QGoTraceSettingsWidget.cxx  QGoTraceSettingsWidget.h  ReadMe.rst  ReadMe.txt  UseGoFigure2.cmake.in  go.ui  gofigure.cxx  itkLsm3DSerieImport.txx  itkMegaCaptureImport.txx  itkMultiFileReader.h  itkMultiFileReader.txx
Code/: CMakeLists.txt  ContourContainerFileSystem.h  GoFigureGlobalDefinition.h  GoFigureLibsConfigure.h.in  QGoMainWindow.h  go.ui  itkMegaCaptureImport.h
Code/Attic/: LineageDockWidget.ui  MeshTextFileImport.cxx  MeshTextFileImport.h  QGoTabImageView4D.cxx  SegmentationSeedBaseWidget.ui  TrackDockWidget.ui  TrackTextFileImport.cxx  TrackTextFileImport.h  itkLsm3DSerieImport.cxx  itkLsm3DSerieImport.h  itkMultiFileReader.cxx  itkMultiFileReader.h
Code/ExternalCode/: CMakeLists.txt
Code/Filters/: CMakeLists.txt  ContourToMeshFilter.h  ContourToMeshFilter.txx  GoFiltersConfigure.h.in  itkBinaryMaskImageToGoFigureMeshAttributes.h  itkBinaryMaskImageToGoFigureMeshAttributes.txx  itkCellFeatureGenerator.h  itkCellFeatureGenerator.txx  itkCellForegroundExtraction.h  itkCellForegroundExtraction.txx  itkCellPreprocess.h  itkCellPreprocess.txx  itkChanAndVeseSegmentationFilter.h  itkGaussianProfileMatchingImageFilter.h  itkGaussianProfileMatchingImageFilter.txx  itkGradientWeightedDistanceImageFilter.h  itkGradientWeightedDistanceImageFilter.txx  itkGradientWeightedIntensityImageFilter.h  itkGradientWeightedIntensityImageFilter.txx  itkMorphologicalWatershedFromMarkersImageFilter2.h  itkMorphologicalWatershedFromMarkersImageFilter2.txx  itkMorphologicalWatershedImageFilter2.h  itkMorphologicalWatershedImageFilter2.txx  itkMultiScaleLoGDistanceImageFilter.h  itkMultiScaleLoGDistanceImageFilter.txx  itkMultiScaleLoGImageFilter.h  itkMultiScaleLoGImageFilter.txx  itkPreprocessImageFilter.h  itkPreprocessImageFilter.txx  itkSingleCellSplitImageFilter.h  itkSingleCellSplitImageFilter.txx  itkViscousWatershedTransform.h  itkViscousWatershedTransform.txx  itkWatershedBasedCellSegmentation.h  itkWatershedBasedCellSegmentation.txx  itkvtkMeshMergerFilterBase.h  itkvtkMeshSplitterFilterBase.h  itkvtkPolyDataToBinaryMaskImageFilter.h  itkvtkPolyDataToBinaryMaskImageFilter.txx  itkvtkPolyDataToGoFigureMeshAttributes.h  (+1 more)
Code/GUI/: CMakeLists.txt  GeodesicActiveContourDockWidget.ui  ManualSegmentationDockWidget.ui  OneClickSegmentationDockWidget.ui  QGoMainWindow.cxx  QGoMainWindow.h  go.ui  gofigure.cxx
Code/IO/: CMakeLists.txt  ContourMeshContainer.cxx  ContourMeshContainer.h  ContourMeshStructure.cxx  ContourMeshStructure.h  ContourMeshStructureHelper.cxx  ContourMeshStructureHelper.h  ConvertToStringHelper.h  CreateDataBaseHelper.cxx  CreateDataBaseHelper.h  GoDBAuthorRow.cxx  GoDBAuthorRow.h  GoDBBookmarkRow.cxx  GoDBBookmarkRow.h  GoDBCellTypeRow.cxx  GoDBCellTypeRow.h  GoDBChannelRow.cxx  GoDBChannelRow.h  GoDBCollectionOfTraces.cxx  GoDBCollectionOfTraces.h  GoDBColorRow.cxx  GoDBColorRow.h  GoDBContourRow.cxx  GoDBContourRow.h  GoDBCoordinateRow.cxx  GoDBCoordinateRow.h  GoDBExperimentRow.h  GoDBExport.cxx  GoDBExport.h  GoDBFigureRow.h  GoDBImageRow.cxx  GoDBImageRow.h  GoDBImgSessionRow.cxx  GoDBImgSessionRow.h  GoDBImport.cxx  GoDBImport.h  GoDBIntensityRow.cxx  GoDBIntensityRow.h  GoDBLineageRow.cxx  GoDBLineageRow.h  (+102 more)
Code/qt/: QImagePageView4DTracer.cxx  QImagePageView4DTracer.h  QImagePageViewTracer.h  QSplitterchild.cxx
Documentation/Doxygen/: CMakeLists.txt  Doxyfile.txt.in  MainPage.dox
Examples/Filters/: CMakeLists.txt  CellMergeImageFilter.cxx  ChanAndVeseSegmentationFilterTest2D.cxx  ChanAndVeseSegmentationFilterTest3D.cxx  ContourToMeshFilterTest.cxx  ConvertMeshesToLabelImageFilter.cxx  ExtractMeshesFromLabelImageFilter.cxx  MeshToContourFilterTest.cxx  SingleCellSplitImageFilter.cxx  itkBinaryMaskImageToGoFigureMeshAttributesTest.cxx  itkQuadEdgeMeshTovtkPolyDataTest.cxx  itkvtkMeshMergeConvexHullFilterTest.cxx  itkvtkMeshSplitterDanielssonImageFilterTest.cxx  itkvtkPolyDataToGoFigureMeshAttributesTest.cxx  itkvtkPolyDataToitkQuadEdgeMeshTest.cxx  itkvtkPolyDatatoBinaryMaskImageFilterTest.cxx
Examples/IO/: 3DLsmSerie2mha.cxx  CMakeLists.txt  GenerateImagingSessionPartInMegaCaptureHeaderFromMHA.cxx  GoDBBookmarkRowTest.cxx  GoDBChannelRowTest.cxx  GoDBColorRowTest.cxx  GoDBContourRowTest.cxx  GoDBCoordinateRowTest.cxx  GoDBExportContourTest.cxx  GoDBImageRowTest.cxx  GoDBImgSessionRowTest.cxx  GoDBImportTracksTest.cxx  GoDBIntensityRowTest.cxx  GoDBLineageRowTest.cxx  GoDBMeshRowTest.cxx  GoDBProjectRowTest.cxx  GoDBRecordSetTest.cxx  GoDBTraceRowTest.cxx  GoDBTrackRowTest.cxx  ImportMultiFilesInDB.cxx  MegaCapture2mha.cxx  MegaCaptureHeaderReaderTest.cxx  extractChannelAtTimePointFromLSM.cxx  gofigurefileinfomultiindexcontainerhelper.cxx  itkmegacapturereader.cxx  kishmeshtextfilereader.cxx  lsm2jpg.cxx  lsm2mha.cxx  lsm2vtk.cxx  lsmColorVizu.cxx  lsmtomegacapture.cxx  megacaptureimport.cxx  mhatomegacapture.cxx  multifilereader.cxx  trackTextFilesReader.cxx  vtkPolyDataMySQLContourReader.cxx  vtkPolyDataMySQLContourWriter.cxx  vtkPolyDataMySQLMeshReader.cxx  (+4 more)
Main/: CMakeLists.txt  QGoExport.cxx  QGoExport.h  QGoMainWindow.cxx  QGoMainWindow.h  QGoPluginManager.cxx  QGoPluginManager.h  QGoSynchronizedViewMainWindow.cxx  QGoSynchronizedViewMainWindow.h  QGoTabManager.cxx  QGoTabManager.h  comparegui.cxx  gf2-desktop.sh.in  go.ui  gofigure.cxx  gofigure.cxx.in
trunk/: CMakeLists.txt  ContourContainerBase.h  ContourContainerDataBase.h  ContourContainerFileSystem.h  LUTDialog.ui  QGoLUTDialog.cxx  QGoLUTDialog.h  QGoMainWindow.cxx  QGoMainWindow.h  go.ui  gofigure.cxx  itkQtProgressBar.cxx  itkQtProgressBar.h  qticonloader.cpp  qticonloader.h  vtkLSMReader.cxx  vtkLSMReader.h
(+1669 files in other folders)
